# webarchiving-awesome-graph

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: update.yaml
graphs/: awesome.ttl  awesome_shapes.ttl  doap.ttl  prefixes.ttl
templates/: README.md.jinja
waag/: __init__.py  cli.py  graph_generation.py  list_parser.py  queries.py
