[project]
name = "awesome-archiving-graph"
description = ""
version = "0.1.0"
readme = "README.md"
authors = [{name = "Natanael Arndt", email = "n.arndt@dnb.de"}]
requires-python = '>=3.11,<3.13'
dependencies = ['click (>=8.1.7,<9.0.0)', 'rdflib (>=7.0.0,<8.0.0)', 'ruff (>=0.4.1,<0.5.0)', 'pysparql-anything (>=0.9.0.3,<0.10.0.0)', "gitdoap @ git+https://github.com/white-gecko/gitdoap"]

[tool.poetry]
packages = [
    { include = "waag" },
]
requires-poetry = '>=2.0,<3.0'

[tool.poetry.dependencies]
gitdoap = {develop = true}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
